; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/netlogic/common/extr_irq.c_xlp_pic_disable.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/netlogic/common/extr_irq.c_xlp_pic_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }
%struct.nlm_pic_irq = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @xlp_pic_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xlp_pic_disable(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  %3 = alloca %struct.nlm_pic_irq*, align 8
  %4 = alloca i64, align 8
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %5 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %6 = call %struct.nlm_pic_irq* @irq_data_get_irq_chip_data(%struct.irq_data* %5)
  store %struct.nlm_pic_irq* %6, %struct.nlm_pic_irq** %3, align 8
  %7 = load %struct.nlm_pic_irq*, %struct.nlm_pic_irq** %3, align 8
  %8 = icmp ne %struct.nlm_pic_irq* %7, null
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @BUG_ON(i32 %10)
  %12 = load %struct.nlm_pic_irq*, %struct.nlm_pic_irq** %3, align 8
  %13 = getelementptr inbounds %struct.nlm_pic_irq, %struct.nlm_pic_irq* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @spin_lock_irqsave(i32* %15, i64 %16)
  %18 = load %struct.nlm_pic_irq*, %struct.nlm_pic_irq** %3, align 8
  %19 = getelementptr inbounds %struct.nlm_pic_irq, %struct.nlm_pic_irq* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.nlm_pic_irq*, %struct.nlm_pic_irq** %3, align 8
  %24 = getelementptr inbounds %struct.nlm_pic_irq, %struct.nlm_pic_irq* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @nlm_pic_disable_irt(i32 %22, i32 %25)
  %27 = load %struct.nlm_pic_irq*, %struct.nlm_pic_irq** %3, align 8
  %28 = getelementptr inbounds %struct.nlm_pic_irq, %struct.nlm_pic_irq* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i64, i64* %4, align 8
  %32 = call i32 @spin_unlock_irqrestore(i32* %30, i64 %31)
  ret void
}

declare dso_local %struct.nlm_pic_irq* @irq_data_get_irq_chip_data(%struct.irq_data*) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @nlm_pic_disable_irt(i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
